files/virtualservice/busybox-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hexiaohong-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hexiaohong-client
  template:
    metadata:
      labels:
        app: hexiaohong-client
    spec:
      containers:
      - name: busybox
        image: busybox
        imagePullPolicy: IfNotPresent
        command: ["/bin/sh", "-c", "sleep 3600"]
        
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  selector:
    app: hexiaohong-client
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
