files/virtualservice/virtualservice-with-header.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-svc-vs
spec:
  hosts:
  - web-svc.default.svc.cluster.local
  http:
  - match:
    - headers:
        to:
          exact: httpd
    route:
    - destination:
        host: httpd-svc
  - route:
    - destination:
        host: tomcat-svc
