files/virtualservice/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-svc-vs
spec:
  hosts:
  - web-svc.default.svc.cluster.local
  http:
  - route:
    - destination:
        host: httpd-svc
      weight: 80
    - destination:
        host: tomcat-svc
      weight: 20
